kubernetes-networks/canary/web-svc-main.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: web-svc-main
spec:
  selector:
    app: web-canary
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
